Created SeedData class and populated with data

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,20 +3,16 @@
 *@
 @{
 }
-<div>
-    <h1>My Company</h1>
-    <p>Here I will add the infromation.</p>
+<div class="text-center">
+    <h1>The Silver Spoon</h1>
+    <p><i>-Treasure of All Spoon</i></p>
 </div>
 
 @{
     ViewData["Title"] = "About";
 }
-<h1>@ViewData["Title"]</h1>
+<h4>@ViewData["Title"]</h4>
 
 <p>Use this page to detail your site's privacy policy.</p>
 
 
-<div class="text-center">
-    <h1 class="display-4">About</h1>
-    <p>This is about page <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
