Added some CSS style

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,18 +1,38 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+    For more information on enabling MVC fsor empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
 <div class="text-center">
-    <h1>The Silver Spoon</h1>
-    <p><i>-Treasure of All Spoon</i></p>
+    <h1 style="background-color: aqua; border-radius: 10px; ">The Silver Spoon</h1>
+    <p style="color: green;"><i>-Treasure of All Spoon</i></p>
 </div>
 
-@{
-    ViewData["Title"] = "About";
-}
-<h4>@ViewData["Title"]</h4>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div>
+    <h4>About Our Company</h4>
+    <pre>    The company founded in 2008 in Windsor, Ontario, Canada. 
+    The company was originally producing Plastic Spoon for restaurant. 
+    Later it focused on every aspects of Spoon that used in human life.</pre>
+</div>
+<div>
+    <h4>Our Products and Services</h4>
+    <pre>    We have all types of spoon including Tea, Table, Soup, Dessert,
+    Serving, Dinner, Korean, Coffee, Spork, Salt, Grapefruit, Sauce etc.</pre>
+    <pre>    Variety of color - Silver, Golden, Rose-Gold, White, Brown etc.</pre>
+    <pre>    Variety of materials such as Stainless Steel, Copper, Silicon, Plastic,
+    Porcelain, Bamboo, Wood etc. with different price range.</pre>
+</div>
 
+
+
+<div style="background-color: rgb(204, 255, 230);">
+
+
+    <pre>    <b>CEO:</b>Abu Enayet Siddique.
+    <b>Location:</b>
+        xxx Elm Avenue, College Street
+        Windsor, ON N9A 5H3
+        Ontario, Canada.</pre>
+</div>
 
