--- a/Views/Spoons/Index.cshtml
+++ b/Views/Spoons/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MvcSpoon.Models.Spoon>
+﻿@*All the populated Data will be displayed by this file*@
+@model IEnumerable<MvcSpoon.Models.Spoon>
 
 @{
     ViewData["Title"] = "Index";
