Added Rating field, added css and image

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,36 +3,46 @@
 *@
 @{
 }
-<div class="text-center">
-    <h1 style="background-color: aqua; border-radius: 10px; ">The Silver Spoon</h1>
-    <p style="color: green;"><i>-Treasure of All Spoon</i></p>
-</div>
-
-
-<div>
-    <h4>About Our Company</h4>
-    <pre>    The company founded in 2008 in Windsor, Ontario, Canada. 
-    The company was originally producing Plastic Spoon for restaurant. 
-    Later it focused on every aspects of Spoon that used in human life.</pre>
-</div>
-<div>
-    <h4>Our Products and Services</h4>
-    <pre>    We have all types of spoon including Tea, Table, Soup, Dessert,
-    Serving, Dinner, Korean, Coffee, Spork, Salt, Grapefruit, Sauce etc.</pre>
-    <pre>    Variety of color - Silver, Golden, Rose-Gold, White, Brown etc.</pre>
-    <pre>    Variety of materials such as Stainless Steel, Copper, Silicon, Plastic,
-    Porcelain, Bamboo, Wood etc. with different price range.</pre>
-</div>
+<link rel="stylesheet" href="~/css/style.css" />
+<section>
+    <div class="text-center" id="com-name">
+        <h1>The Silver Spoon</h1>
+        <p style="color: green;"><i>-Treasure of All Spoon</i></p>
+    </div>
 
 
 
-<div style="background-color: rgb(204, 255, 230);">
+    <div>
+        <h4>About Our Company</h4>
+        <p>
+            The company founded in 2008 in Windsor, Ontario, Canada. </br>
+            The company was originally producing Plastic Spoon for restaurant. </br>
+            Later it focused on every aspects of Spoon that used in human life.
+        </p>
+    </div>
+    <div>
+        <h4>Our Products and Services</h4>
+        <p>
+            We have all types of spoon including Tea, Table, Soup, Dessert, </br>
+            Serving, Dinner, Korean, Coffee, Spork, Salt, Grapefruit, Sauce etc.
+        </p>
+        <p>Variety of color - Silver, Golden, Rose-Gold, White, Brown etc.</p>
+        <p>
+            Variety of materials such as Stainless Steel, Copper, Silicon, </br>
+            Plastic,Porcelain, Bamboo, Wood etc. with different price range.
+        </p>
+    </div>
 
 
-    <pre>    <b>CEO:</b>Abu Enayet Siddique.
-    <b>Location:</b>
-        xxx Elm Avenue, College Street
+
+    <div>
+
+
+        <pre class="info-style">    <b>CEO:</b>Abu Enayet Siddique.
+        <b>Location:</b>
+        xxx Avenue, College Street
         Windsor, ON N9A 5H3
         Ontario, Canada.</pre>
-</div>
+    </div>
 
+</section>
