--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<link rel="stylesheet" href="~/css/style.css" />
 <div class="text-center">
-    <h3 class="display-4">Welcome to Our Spoon World</h3>
+    <h4 class="display-4">Welcome to Our Spoon World</h4>
 
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="image/spoon.jpeg" alt="spoon image" width="700px" height="400px" />
+
+    <p>Click to go to <a href="https://localhost:44337/Spoons">Product List</a>.</p>
 </div>
