--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,17 +6,14 @@
     <title>@ViewData["Title"] - The Silver Spoon</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <style type="text/css">
-        body, pre {background-color: rgb(204, 255, 230);font-family: Arial, Helvetica, sans-serif;}
-        .nav-item { background-color: aquamarine; border-radius: 10px;}
-    </style>
+    <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 @*made the company name bold*@
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-weight:bold;">The Silver Spoon</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">The Silver Spoon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,16 +22,13 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About Us</a> @*About Us Button added to the Navigation Bar*@
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Spoons" asp-action="Index">Spoon List</a>@*Product (Spoon) list button added to the Navigation Bar *@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Spoons" asp-action="Index">Products</a>@*Product (Spoon) list button added to the Navigation Bar *@
                         </li>
                     </ul>
                 </div>
@@ -49,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.ToString("yyyy-MM-ddTHH:mm") - The Silver Spoon - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.ToString("yyyy-MM-dd") - The Silver Spoon - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
